feat: add freeze windows
